Bug 79883 - PRINTING: Crash when only 1 single Form Control is selected
Summary: PRINTING: Crash when only 1 single Form Control is selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: high major
Assignee: David Tardon
URL:
Whiteboard: BSA target:4.4.0 target:4.3.0.1 targe...
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-06-10 13:11 UTC by Bugcruncher
Modified: 2014-06-12 13:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt + console logs (16.37 KB, text/plain)
2014-06-10 17:35 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bugcruncher 2014-06-10 13:11:58 UTC
Steps to reproduce:
1. Open new Drawing
2. Insert new Form Control "Text Box"
3. Leave Form Controls edit mode
4. Select the form control with control+a (I do not know a
   different way)
5. Menu File
6. Print - Click Radio Button "Selection"
   CRASH

During recovery I get a message: 
Die Datei '$(ARG1)' ist defekt und kann deshalb nicht geöffnet werden. LibreOffice kann versuchen, die Datei zu reparieren.
Der Defekt kann durch eine Manipulation am Dokument oder durch einen Fehler bei der Datenübertragung verursacht worden sein.
Sie sollten dem Inhalt der Datei nicht vertrauen.
Das Ausführen von Makros wird in diesem Dokument deaktiviert.
Soll LibreOffice die Datei reparieren?

I get the crash also for other form controls, but not for simple shapes.              
Operating System: Windows 7
Version: 4.2.4.2 release
Comment 1 Julien Nabet 2014-06-10 17:35:41 UTC
Created attachment 100835 [details]
bt + console logs

On pc Debian x86-64 with master sources updated today, I could reproduce this.
(printer = PDF).
Comment 2 Julien Nabet 2014-06-10 17:39:34 UTC
I don't reproduce this on Writer.

Thorsten: one for you? (bt with symbols attached in previous comment)
Comment 3 Commit Notification 2014-06-12 10:14:31 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=551c915dcbf3e1d6bfd799c6e13e5700e2c3e535

fdo#79883 the page view object contact must exist



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-06-12 10:21:19 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9d6da2f3d135cc314bf14829b2a85ce0ca6319d&h=libreoffice-4-3

fdo#79883 the page view object contact must exist


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-06-12 13:13:09 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=15a4ad716c169f8502a4156238a3e79a9d7b7319&h=libreoffice-4-2

fdo#79883 the page view object contact must exist


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.