fdo#79883 the page view object contact must exist

Change-Id: I5c6bd3ea267f1ea84b46e46aa508a27d00903347
(cherry picked from commit 551c915dcbf3e1d6bfd799c6e13e5700e2c3e535)
Reviewed-on: https://gerrit.libreoffice.org/9747
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>